versions/v4.0.0/doxygen/html/functions_b.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/doxygen/html/functions_b.html
original_path: doxygen/html/functions_b.html
---

| Logo | Zephyr API Documentation 4.0.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all struct and union fields with links to the structures/unions they belong to:

### - b -

- b : [ft8xx\_touch\_transform](structft8xx__touch__transform.md#a307e6438e32a36ac78c76979925e5e1c), [led\_rgb](structled__rgb.md#abf071f86f224daa42b3b905071e550af), [tee\_param](structtee__param.md#a22785fe00950c3a7d6353c39b12d72a8)
- b000 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#aab665bbc1e9ff1a7daa74acb6dc191c0)
- b001 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#ac0a4b33efd9c4bf4ddf705000a566830)
- b002 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#aff993abeb30ea8d8054f96b41100af2b)
- b003 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a476ade06264c7d8748589684e8d659d7)
- b004 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#ad2fd670a9fc1cb21fc2b7ec05ffd1190)
- b005 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a2389957ae22cfcd8ba7a04c71e56a598)
- b006 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#acbe4d9e8b4a28d61c340d3bc6ef3b58f)
- b007 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a4913252756d3c3603adfb53ecfd4ca30)
- b008 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a395cecde2aede749366cf98d77671f20)
- b009 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a1e30edab982ea030c12fd6769c609dae)
- b010 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a0c44c3265eaeeafdc3d99cb6cc75c181)
- b011 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a8b50ba68eb37b6efc2c0965144a57a1b)
- b012 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a0252324460746c1e7ee79fccd50c23bd)
- b013 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#ae53254d344fec51cde3de9daff5fee7e)
- b014 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a77cb77c43ff3a75b655f912f352e74af)
- b015 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a94c9bfc6b185bb9f6dfc12f85bf92ccd)
- b016 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a41ce7c7853f6c5f2eb216e5ec376233a)
- b017 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a6e5eae2dccd25da5d5f810a28c13febc)
- b018 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#af3723aa40307c3394e5892c6fc7c449f)
- b019 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a22a077382154519b867a7f2e74935111)
- b020 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#ae0610211a298f68244d3c7e8eeda324f)
- b021 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#af3167f6678a3b7ebf19a9b51318fabef)
- b022 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#af4ac762cc131c66834186c20276ee0bc)
- b023 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a864feb35216f5a0d287a3e995f60c46a)
- b024 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#acb026914242bd25ab7aeb38f63251a91)
- b025 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a4b3257ad9cb7aff11c96b1be8e93b938)
- b026 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a7267903aef20133fcc65fe13adaf9dce)
- b027 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a9a004f814ecc9295d0bfb6a058603a4d)
- b028 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#acf7e1c4c60cc9a55608450038c60076e)
- b029 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a378ded6128b4a0c46b621d2a20d41785)
- b030 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a3aff2f55fa9746c65fab3d8fa73f8f28)
- b031 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a0a75ae0c1580b20370edf626b7089e96)
- b032 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a6a1c1afb76b55f9ca7c8ca8921aeab94)
- b033 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a561164667e632832f3f36d2dfc99194e)
- b034 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#ac6f2969063187429f296f00ddee15dc5)
- b035 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#ad28df448a10e65c4d45f0591df45863f)
- b036 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a0965d4c1ce6ad9b15c992cbee7e43581)
- b037 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a193d2edbca49b718ea376ecf505ceed1)
- b038 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#aecbdc2ba15bfe55a890c52ac45b09fdd)
- b039 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a3680fae5d1a4c9c3b48fc882b12067ae)
- b040 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#ae662e4d2c2e5adac1c19fb0298c7b4ad)
- b041 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#aff3eca7d27b10df6affe86af33d21e0a)
- b042 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a78b1ad51fe8dbc438fd099195a6ea986)
- b043 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a80697ee52d28c583896d5c7ed5d488f5)
- b044 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a720b5de073fa683ccd37080a1cec2cbf)
- b045 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a8d3fa1d37b1aa526ded7d470e9af55dd)
- b046 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#aa149c469d2afab259d0b8713901dbdc1)
- b047 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#ae664ecf070f0ebca55d12cacd75cc175)
- b048 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a89d41c4ed781723ddf46f82d96388171)
- b049 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a9bc8e17cf5e726e3f4c6f447feb8b6cc)
- b050 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#adaaf903d2d26f8420af85870427cc077)
- b051 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a3d7f074c57806c9ea231f1833952dfa5)
- b052 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a441a9092824122b640aebd23bf375455)
- b053 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#ae4a6353ea5ea3782717b64d244ab0f6d)
- b054 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#adb0d60c86cdd968016693847a76b7fcf)
- b055 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a8d5882d109314f72e9168a53a95f88b7)
- b056 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#afe45733316726992bcfebb604da5fee1)
- b057 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a1457c2d9117a476800a494565c49be5b)
- b058 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#aec302f0382977f82a89f8b9f03c00c43)
- b059 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#acea3a50b7663d7a1a7ae32df8edb543b)
- b060 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a262a98868ffe43c200502fa2320690a7)
- b061 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#ad5d6e34e3f8988b44f5a83b975371495)
- b062 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a0e2874f723fe0f08ad3fb124d87537a5)
- b063 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a3ee5d4cded42a95d20af476cd0f1d11b)
- b064 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a6804c794d52c12112b422887751b0505)
- b065 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a650eeff10b6f8fb39781b135c76e3719)
- b066 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a1163f8a0a4a3112aa1985a283e17ecfc)
- b067 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#aeb4dea7898da9f5cbc0e645a140fb83e)
- b068 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a9982c0ede4ff499f29bc31c07fb2e4e0)
- b069 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#af4139fb3c97a934b2d852bb789ecc7cb)
- b070 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a19b70fe75c0bc35233f81137d2b1b9de)
- b071 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#ace79cf904d9e7cade53b69a9bb399b20)
- b072 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#acd5d3b551788b54c057ff12a94e00298)
- b073 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#ae90d8579cecfc5b4dca41146ba24fe12)
- b074 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#abcbb9236f45d28a4c00b65f2a836b506)
- b075 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#aac819746680655ef6badfcb7153a541c)
- b076 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a4437ed4c525685b80967bbec8ed8a9be)
- b077 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a8a6a13d75573a6e30a1e5f2f4c923723)
- b078 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#aa8b5ecbd829ac2eb63a467c388a25bfd)
- b079 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a1cb41bd08cf5405b442df75bc5b99cbc)
- b080 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a54a1fe008cb4455da6e9cc196e53b173)
- b081 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a30127614e9518b8904b45c83724d62d0)
- b082 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a3f8ec64524f4639678eaeff0154d5949)
- b083 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a22cac6f8d6ba2a3f52d0b0e99940bac7)
- b084 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a86c57f04b3e0ed408cafdfa30c99ec1d)
- b085 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a82c55914a45ca14872d5fbc3d9a287f6)
- b086 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a18b552766e446ab6b626d17323249af8)
- b087 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#af1b0588b223374b4cb3ce3a5c28a5e01)
- b088 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#afda4683b4cd8848dff0c45a3de10bf37)
- b089 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a820f214df5c798162a486e807ee016d2)
- b090 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a09ec9fa84702dd8e5e4af8d05bcc3f7c)
- b091 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a7549a67515bf980dca171a6231caf53d)
- b092 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#acab46bd7cab0c24fe441eaa2cbcbba16)
- b093 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a4a3d690ba13a80b9e30c51216c299a8d)
- b094 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a8a3c150461c95c4fc98131b6cdcf3ee0)
- b095 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a9d9b2d3c78decfe2a529c58424d2d2e9)
- b096 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#add7bbdf8d9c3a0d91aabad9c166b60a4)
- b097 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a27aa6e2dbc549227dcff32cfc33f357f)
- b098 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#af4cc1e04ace8aed70371ea4bd5ee7ab6)
- b099 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#afa848d20fede294bc05bb5736a8a9a45)
- b100 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a2e462fd2de0697b9c7e8e82a99976d7d)
- b101 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a6300ccbb6f0c4ddcd43ca1230756a906)
- b102 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#abfcb1a394afba0f928a752514b53bf16)
- b103 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a8928be6391ad42b1f7488543a3317aa8)
- b104 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#aa022976dea15d2bca3f7f727e0df36f7)
- b105 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#acbbaa4a46afcda697e81ed25cc54355c)
- b106 : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a091d60cb37a43b839d00fd58f0530e8a)
- backend : [ec\_host\_cmd](structec__host__cmd.md#ad269f3223fc0885ba5c847b4443c993c), [fs\_littlefs](structfs__littlefs.md#a0ebbf427f161722fc269573d86e562c5), [shell\_log\_backend](structshell__log__backend.md#a653ca6a48ab4d6166ad9e2e25afbbca9)
- backend\_api : [emul](structemul.md#ac7e90a7ff00a0c08836821c7d49b7dea)
- backlight : [auxdisplay\_capabilities](structauxdisplay__capabilities.md#ace4d7b099428e5f7164c3e9e318c1feb)
- backlink : [task\_state\_segment](structtask__state__segment.md#a6dca0f6680e373545f31490cb4667a1e)
- bad\_code : [bt\_bap\_scan\_delegator\_recv\_state](structbt__bap__scan__delegator__recv__state.md#a1c268bb7b340c874935f186c0ba2a253)
- badvaddr : [arch\_esf](structarch__esf.md#a1094f36597a23bf73c6574b4457049c5)
- bAltEnumCode : [usb\_bos\_capability\_msos](structusb__bos__capability__msos.md#a0945c68d9e7911add0c0586b000c90d3)
- bAlternateSetting : [usb\_if\_descriptor](structusb__if__descriptor.md#a170fa703535138cdb1032b149707aae1)
- band : [wifi\_band\_channel](structwifi__band__channel.md#a4a932599429f37231f76c3064ec5efb3), [wifi\_connect\_req\_params](structwifi__connect__req__params.md#aa2fea1881a8ffdf5d7093ae295867f3e), [wifi\_iface\_status](structwifi__iface__status.md#ae1c141a18f4e225af2c22a8cb4f882a8), [wifi\_scan\_result](structwifi__scan__result.md#a38201c9dd798dc11b5bda3ce97b02e92)
- band\_chan : [wifi\_scan\_params](structwifi__scan__params.md#aa5ddbd6bc97b7598288d4b0d38521681)
- bands : [cellular\_network](structcellular__network.md#a9313dcce10911b0febd56022c380f283), [wifi\_scan\_params](structwifi__scan__params.md#a6b571d960ed9d7419e31530e5fb6f97a)
- bandwidth : [lora\_modem\_config](structlora__modem__config.md#a0c6a90e31b4a97d962af3dbd0ee8e885)
- bank : [rcar\_pin\_func](structrcar__pin__func.md#abc0b9a433a3b0e00da4a5fe733c31c7d)
- bap\_iso : [bt\_bap\_stream](structbt__bap__stream.md#af5fdb04fdeb394a0345ece23331445e5)
- bap\_stream : [bt\_cap\_stream](structbt__cap__stream.md#ad9d974d18ec42079b81107485b43bc18)
- base : [arc\_mpu\_region](structarc__mpu__region.md#a4d748e5dcec541bf5aca089861cf931c), [arm\_mpu\_region](structarm__mpu__region.md#a1639ea642561dc45d33774817e6a67b6), [jwt\_builder](structjwt__builder.md#a23a0aa512e5bc66722b6d7a8cf20aa95), [k\_thread](structk__thread.md#a09a988f143ab5c4df887894920ff9df8), [multiboot\_mmap](structmultiboot__mmap.md#a7ef2fdd1ee5803c160010d821a1e772e), [nxp\_enet\_qos\_config](structnxp__enet__qos__config.md#a45491916ea24ab9b99fe2fc14cf94552), [nxp\_mpu\_region](structnxp__mpu__region.md#a3289584e6804b01dae4c48cf0d747b24), [pm\_device](structpm__device.md#afb5db0142ebab7891a42f71b59fd55cb), [pm\_device\_isr](structpm__device__isr.md#ad501eabcd3370e9edb6b0851928fd7ac), [prometheus\_counter](structprometheus__counter.md#a1fcd8ff14fafd229356a8082027affea), [prometheus\_gauge](structprometheus__gauge.md#a619e838dd218710d1563e50aaf4cb83b), [prometheus\_histogram](structprometheus__histogram.md#a951618ccaba4f4eac27efe21ea17fa90), [prometheus\_summary](structprometheus__summary.md#a4af4a8982ac633944e97480c9dbc0119), [timeutil\_sync\_state](structtimeutil__sync__state.md#aadbd2ecd98197865e3a71daa8967ce99), [x86\_memmap\_entry](structx86__memmap__entry.md#ac3e9625c5635d4943e8a4410ab9a0c52)
- base\_hi : [segment\_descriptor](structsegment__descriptor.md#a37dcfdc6eea1021d6be4f18aa26d4030)
- base\_low : [segment\_descriptor](structsegment__descriptor.md#a22d9a7e9718d670507a0555b131079aa)
- base\_mid : [segment\_descriptor](structsegment__descriptor.md#a9bc044fe835300da74561089217ae3b2)
- base\_num : [gpio\_acpi\_res](structgpio__acpi__res.md#a82ef9374bee9aeda5b825cf5179057e8)
- base\_pa : [arm\_mmu\_region](structarm__mmu__region.md#a69c68977967812f3f24f5fc3406eff78)
- base\_reachable\_time : [net\_if\_ipv6](structnet__if__ipv6.md#a500a78fe23ee2ebc63f3d3b53b5b92ea)
- base\_recv : [bt\_bap\_broadcast\_sink\_cb](structbt__bap__broadcast__sink__cb.md#a1adf2124ec9a16c3c68774194febd0fc)
- base\_time : [ethernet\_qbv\_param](structethernet__qbv__param.md#a53646a44e8b0e1f6588c357d49d97693)
- base\_timestamp : [sensing\_sensor\_value\_header](structsensing__sensor__value__header.md#aa8efbfd682535deca1172cb192c1a86c)
- base\_timestamp\_ns : [sensor\_data\_header](structsensor__data__header.md#a1db93386466e8e4778f448ae0d8ca556)
- base\_va : [arm\_mmu\_region](structarm__mmu__region.md#a43861340707e9ce8e25e7221e194edc3)
- base\_xlat\_table : [arm\_mmu\_ptables](structarm__mmu__ptables.md#a5d203fecef43d4a6430763489b15e5b5)
- basic : [arch\_esf](structarch__esf.md#a0b4a5972bfeab496a9a0cf0ab7821d63)
- battery : [bt\_hfp\_hf\_cb](structbt__hfp__hf__cb.md#a8deff765f7aa622d495e768b3137871f), [pd\_rdo](unionpd__rdo.md#a5838022e249981be50aee897c16ce56e)
- battery\_cutoff : [fuel\_gauge\_driver\_api](structfuel__gauge__driver__api.md#a406816c19022eea26f0fd61fb21d234c)
- baud : [modbus\_serial\_param](structmodbus__serial__param.md#af3989f5e20eb96080d456114ef4d86e5), [r502a\_sys\_param](structr502a__sys__param.md#adf5a91c5972af06d1bf9beb6a9040bac)
- baud\_rate : [osdp\_cmd\_comset](structosdp__cmd__comset.md#a9de97b54c83b9643f1dd3413ec3b15e6)
- baudrate : [uart\_config](structuart__config.md#ab532159a689e8f38c2465ce2d1fef354)
- bc12\_role : [bc12\_partner\_state](structbc12__partner__state.md#a4da4a226fd933eea17da379687d49acf)
- bcdCDC : [cdc\_header\_descriptor](structcdc__header__descriptor.md#ab66b3b87594a4510f11ba9ee950f230c)
- bcdDevice : [usb\_device\_descriptor](structusb__device__descriptor.md#a41416aa4a49999d2f3f0f67bdc5fa7da)
- bcdDFUVersion : [dfu\_runtime\_descriptor](structdfu__runtime__descriptor.md#a3dca4dc35930794eaa0ac03522949048)
- bcdNcmVersion : [cdc\_ncm\_descriptor](structcdc__ncm__descriptor.md#aa9b5bd71a73783e4a3c85a1d39f9def3)
- bcdUSB : [usb\_device\_descriptor](structusb__device__descriptor.md#aa400edb6c3183d4922411cdaf980b84e), [usb\_device\_qualifier\_descriptor](structusb__device__qualifier__descriptor.md#aabe610da20b0b4ccc9aefdabd3396bf1)
- bcdVersion : [usb\_bos\_capability\_webusb](structusb__bos__capability__webusb.md#a1ebbfa1bdca4ad783000c67419552e54)
- bCharFormat : [cdc\_acm\_line\_coding](structcdc__acm__line__coding.md#afd2fd70a7da783d7aac0d99f9f267383)
- bcode : [bt\_hci\_cp\_le\_big\_create\_sync](structbt__hci__cp__le__big__create__sync.md#a053475c3af12e6e37dc4befcf634d68f), [bt\_hci\_cp\_le\_create\_big](structbt__hci__cp__le__create__big.md#a0b4b2d77cd0f579aab190336b14597c5), [bt\_hci\_cp\_le\_create\_big\_test](structbt__hci__cp__le__create__big__test.md#a333319a03d2087067247c4f5e595b4e5), [bt\_iso\_big\_create\_param](structbt__iso__big__create__param.md#aaee9af5a21b2f9812f9635c526f3a923), [bt\_iso\_big\_sync\_param](structbt__iso__big__sync__param.md#aaecdeabed10b90e84b618dac1129a9dc)
- bConfigurationValue : [msosv2\_configuration\_subset\_header](structmsosv2__configuration__subset__header.md#a044e9d3a0ec479564406f04d895e353c), [usb\_cfg\_descriptor](structusb__cfg__descriptor.md#a7500c52ffbb63ece0be5cde7c672615d)
- bControlInterface : [cdc\_union\_descriptor](structcdc__union__descriptor.md#a81bdab223598b27b620de0d9dba7bc80)
- bcr : [i3c\_ccc\_deftgts\_active\_controller](structi3c__ccc__deftgts__active__controller.md#aeb56808d9b998c51d5b30307e0212328), [i3c\_ccc\_deftgts\_target](structi3c__ccc__deftgts__target.md#a7c234182e16da66c308e86d72591063d), [i3c\_ccc\_getbcr](structi3c__ccc__getbcr.md#a09df0a49b57a38b91fe2e51c4de5c334), [i3c\_config\_target](structi3c__config__target.md#a1d0b97d6428e471bcf9b6945da947b36), [i3c\_device\_desc](structi3c__device__desc.md#ae1cff0a31d9cc5d7b18206556f8e0b21)
- bdaddr : [bt\_hci\_cp\_accept\_conn\_req](structbt__hci__cp__accept__conn__req.md#aa2954d98fdd42882cf7095e4ce7a3dc5), [bt\_hci\_cp\_accept\_sync\_conn\_req](structbt__hci__cp__accept__sync__conn__req.md#a6a5a56d3a9d1a6d1064e7bd4c9fd333e), [bt\_hci\_cp\_connect](structbt__hci__cp__connect.md#a6f0753aad19d4c9591fa74152d151aa9), [bt\_hci\_cp\_connect\_cancel](structbt__hci__cp__connect__cancel.md#a2adaf1b708689525e44e9a9572f5f357), [bt\_hci\_cp\_io\_capability\_neg\_reply](structbt__hci__cp__io__capability__neg__reply.md#a8dba05bc84de2573eaea43ea9e428015), [bt\_hci\_cp\_io\_capability\_reply](structbt__hci__cp__io__capability__reply.md#afbe2bc0c1dcc0791a98068b052aea1f2), [bt\_hci\_cp\_le\_set\_adv\_set\_random\_addr](structbt__hci__cp__le__set__adv__set__random__addr.md#a2883e9bf7ef6a34712eda2594e23c146), [bt\_hci\_cp\_le\_set\_random\_address](structbt__hci__cp__le__set__random__address.md#a919ef74473f4f86d00595ec8606789d0), [bt\_hci\_cp\_link\_key\_neg\_reply](structbt__hci__cp__link__key__neg__reply.md#aca3114707eb7c631af582626551619cd), [bt\_hci\_cp\_link\_key\_reply](structbt__hci__cp__link__key__reply.md#ab5221952fbcfe413d7c3bd3a441a9b17), [bt\_hci\_cp\_pin\_code\_neg\_reply](structbt__hci__cp__pin__code__neg__reply.md#a8aec3ba6c530850dce0a2d7b7f7f86ee), [bt\_hci\_cp\_pin\_code\_reply](structbt__hci__cp__pin__code__reply.md#a627800dcb580110be785576dfcc49bb1), [bt\_hci\_cp\_reject\_conn\_req](structbt__hci__cp__reject__conn__req.md#a9a1cb4173367c6f018fbd30a47c590b4), [bt\_hci\_cp\_remote\_name\_cancel](structbt__hci__cp__remote__name__cancel.md#a0b7b4362804077ce828aeeb2b8af86b9), [bt\_hci\_cp\_remote\_name\_request](structbt__hci__cp__remote__name__request.md#a5093f7bb70fa36f4948039d02d594e27), [bt\_hci\_cp\_user\_confirm\_reply](structbt__hci__cp__user__confirm__reply.md#abe0e8da3e590c565364ed30ba107a0e6), [bt\_hci\_cp\_user\_passkey\_neg\_reply](structbt__hci__cp__user__passkey__neg__reply.md#ade9d7068054b15089b8c238ecc3e4397), [bt\_hci\_cp\_user\_passkey\_reply](structbt__hci__cp__user__passkey__reply.md#a56dbb4a858ecbf36eee61e24ed3742cf), [bt\_hci\_cp\_vs\_write\_bd\_addr](structbt__hci__cp__vs__write__bd__addr.md#af54e126fff610467dd730902893b6cd2), [bt\_hci\_evt\_conn\_complete](structbt__hci__evt__conn__complete.md#a60a2ca6a8f16e4562c12b369685efa9b), [bt\_hci\_evt\_conn\_request](structbt__hci__evt__conn__request.md#a03a2ee7ff7754173dff0809e4ebce9e6), [bt\_hci\_evt\_io\_capa\_req](structbt__hci__evt__io__capa__req.md#a52412f7bd8f8dea391904b9f2444b50a), [bt\_hci\_evt\_io\_capa\_resp](structbt__hci__evt__io__capa__resp.md#adac9c9f3999099fd460651e3b012fd0f), [bt\_hci\_evt\_link\_key\_notify](structbt__hci__evt__link__key__notify.md#a02647d66142c037b8bca2e748bc15319), [bt\_hci\_evt\_link\_key\_req](structbt__hci__evt__link__key__req.md#aed882dfb6b632383543bd7e60536ccc6), [bt\_hci\_evt\_pin\_code\_req](structbt__hci__evt__pin__code__req.md#a8649a30cd8c7ecf9ee006ddc2e625908), [bt\_hci\_evt\_remote\_name\_req\_complete](structbt__hci__evt__remote__name__req__complete.md#a380121873bf059b7c8a4abdf212f4235), [bt\_hci\_evt\_role\_change](structbt__hci__evt__role__change.md#a18dd22435ae40fcf1c4fd2b90b402c60), [bt\_hci\_evt\_ssp\_complete](structbt__hci__evt__ssp__complete.md#a5030cf334f97cdd982001b3278ed9db1), [bt\_hci\_evt\_sync\_conn\_complete](structbt__hci__evt__sync__conn__complete.md#a78f5560783400f1d1a63b2c9d69fa7ed), [bt\_hci\_evt\_user\_confirm\_req](structbt__hci__evt__user__confirm__req.md#aaeec83c50764c322af7cd64259e54a97), [bt\_hci\_evt\_user\_passkey\_notify](structbt__hci__evt__user__passkey__notify.md#af020e1cd131473fe06a193529a0499ac), [bt\_hci\_evt\_user\_passkey\_req](structbt__hci__evt__user__passkey__req.md#a7f1005423296906e0374050bc30781ce), [bt\_hci\_rp\_connect\_cancel](structbt__hci__rp__connect__cancel.md#a0ccfcbd294aa067879ab8d7a41bc41c9), [bt\_hci\_rp\_pin\_code\_neg\_reply](structbt__hci__rp__pin__code__neg__reply.md#a168caf2a517aa573bd6acaf48e414e9b), [bt\_hci\_rp\_pin\_code\_reply](structbt__hci__rp__pin__code__reply.md#afc7c991fd8050e8aae56b8587b5ee01d), [bt\_hci\_rp\_read\_bd\_addr](structbt__hci__rp__read__bd__addr.md#aec2c022a465982a3868100699c95f4e6), [bt\_hci\_rp\_remote\_name\_cancel](structbt__hci__rp__remote__name__cancel.md#a455432799a1272f88b2b00a35a2e7ef5), [bt\_hci\_rp\_user\_confirm\_reply](structbt__hci__rp__user__confirm__reply.md#a91678db3ae2a696ba7b9dd5bc080c488), [bt\_hci\_vs\_static\_addr](structbt__hci__vs__static__addr.md#aa9b61e3f589465c68a4b6356c9de8b66)
- bDataBits : [cdc\_acm\_line\_coding](structcdc__acm__line__coding.md#ab685d018d83e3e2d38c87c27902cca3e)
- bDataInterface : [cdc\_cm\_descriptor](structcdc__cm__descriptor.md#a0a29f8dfe1dd9758f210b63d7a87bdc6)
- bDescriptorSubtype : [cdc\_acm\_descriptor](structcdc__acm__descriptor.md#ae1011a0e1520193be5c1fb0fe442915e), [cdc\_cm\_descriptor](structcdc__cm__descriptor.md#a908003360bca9ab79f55d80a2fc7aa24), [cdc\_ecm\_descriptor](structcdc__ecm__descriptor.md#aaf95074ec751f227a33317325567c890), [cdc\_header\_descriptor](structcdc__header__descriptor.md#a49bf7e700891057f30cd3be77dec0752), [cdc\_ncm\_descriptor](structcdc__ncm__descriptor.md#a9fb11a778a65e5e8538619467cd6c6d6), [cdc\_union\_descriptor](structcdc__union__descriptor.md#a965212d833550c13376b231d5e2ce125)
- bDescriptorType : [cdc\_acm\_descriptor](structcdc__acm__descriptor.md#ab62800772430a82673004fcaac13c071), [cdc\_cm\_descriptor](structcdc__cm__descriptor.md#ad40616645c5b28754300594b43805a1f), [cdc\_ecm\_descriptor](structcdc__ecm__descriptor.md#ae000bdad185ca5af3674274ea3fa45d6), [cdc\_header\_descriptor](structcdc__header__descriptor.md#a3b8cc0d8b9d56db158f3b027b2cd6f6a), [cdc\_ncm\_descriptor](structcdc__ncm__descriptor.md#a9dea58db91413ebcff65151e006a3b2c), [cdc\_union\_descriptor](structcdc__union__descriptor.md#a839a6a4a7c4b2618c49649d93b7c6ff9), [dfu\_runtime\_descriptor](structdfu__runtime__descriptor.md#a5464341cf3c706af93de58c6db5edfb9), [usb\_association\_descriptor](structusb__association__descriptor.md#ac7c1237aafde77115977bd05b1b8b0ff), [usb\_bos\_capability\_lpm](structusb__bos__capability__lpm.md#a880b1f6efecf7d1e8e9076680c74f9c2), [usb\_bos\_descriptor](structusb__bos__descriptor.md#afd74417a44821690051d50cd5ffdd581), [usb\_bos\_platform\_descriptor](structusb__bos__platform__descriptor.md#a26a748945b0223d369a05ad06a2c6d05), [usb\_cfg\_descriptor](structusb__cfg__descriptor.md#aa89fd9e8dd2bace7709d77de1d0b2588), [usb\_desc\_header](structusb__desc__header.md#a43ae191657b7be54357d445ff1d98950), [usb\_device\_descriptor](structusb__device__descriptor.md#ad1ba08da6ad5b6023f1d0d1461daab7d), [usb\_device\_qualifier\_descriptor](structusb__device__qualifier__descriptor.md#a1547d76b3c2f7599d2621e4c73ef485d), [usb\_ep\_descriptor](structusb__ep__descriptor.md#a21412242cf380750e2623f50b5c294e6), [usb\_if\_descriptor](structusb__if__descriptor.md#aed00a5334643e15dca23b72ec9d0bc32), [usb\_string\_descriptor](structusb__string__descriptor.md#a37d44e07cb6d5b449b03fb70c9677b15), [usbd\_desc\_node](structusbd__desc__node.md#a786e2911b5ec7d6c908c148be4d27f5f)
- bDevCapabilityType : [usb\_bos\_capability\_lpm](structusb__bos__capability__lpm.md#a1ceea07e81970d684a6c1586364a0c90), [usb\_bos\_platform\_descriptor](structusb__bos__platform__descriptor.md#a8e8e95a1648e6bba7568c519158de917)
- bDeviceClass : [usb\_device\_descriptor](structusb__device__descriptor.md#aa657267e1d9762b7d2ed3eb60a78d9ad), [usb\_device\_qualifier\_descriptor](structusb__device__qualifier__descriptor.md#aeb3cbfe114aa775d5121a5580dafa16e)
- bDeviceProtocol : [usb\_device\_descriptor](structusb__device__descriptor.md#a56829af76e57a6ea4fc621b52a0664f8), [usb\_device\_qualifier\_descriptor](structusb__device__qualifier__descriptor.md#a9665e7509c611a4eaa0345d3f96ec707)
- bDeviceSubClass : [usb\_device\_descriptor](structusb__device__descriptor.md#aecfbe730bc3eeccc9c4b5fd17f5f3c3c), [usb\_device\_qualifier\_descriptor](structusb__device__qualifier__descriptor.md#a9335b5c4955f68463484b55eb480a1fb)
- bdf : [msi\_vector](structmsi__vector.md#a643d712565f3464874efaab81b25b68a), [pcie\_dev](structpcie__dev.md#a7cc2f61e85b1d9c4985115b91fc6e832)
- beacon\_interval : [wifi\_iface\_status](structwifi__iface__status.md#a241bfbe70628006b515b5f9e4f97665c)
- beacon\_payload : [ieee802154\_req\_params](structieee802154__req__params.md#a74d1d4fc3dbff188f0fddcf091da3723)
- beacon\_payload\_len : [ieee802154\_req\_params](structieee802154__req__params.md#a05bf6f9356b375ed9706bd1a8cdc497c)
- beacon\_status : [bt\_mesh\_cfg\_cli\_cb](structbt__mesh__cfg__cli__cb.md#a5cf2c17a88c53c514fcaa73a6fd81b67)
- beacons\_miss : [net\_stats\_sta\_mgmt](structnet__stats__sta__mgmt.md#a29ae0079b4c780e0de2656a85ec15fe9)
- beacons\_rx : [net\_stats\_sta\_mgmt](structnet__stats__sta__mgmt.md#ac6e68fded8e19b20259442436923f815)
- bearer\_provider\_name : [bt\_tbs\_client\_cb](structbt__tbs__client__cb.md#a36d8ea1717e57b9440e9b58e9411422a)
- bearer\_uci : [bt\_tbs\_client\_cb](structbt__tbs__client__cb.md#a15ccb7de457631620983e7d2d0372967)
- bearing : [navigation\_data](structnavigation__data.md#af9887a29823fc3e083dbd14d1f6cfce1)
- before : [ztest\_suite\_node](structztest__suite__node.md#a0a1eeaa1f0b90918e6b87e1d37d84eef)
- bEndpointAddress : [usb\_ep\_descriptor](structusb__ep__descriptor.md#a60234a9d35e232957672a5bc5573d541)
- bFirstInterface : [msosv2\_function\_subset\_header](structmsosv2__function__subset__header.md#abf8bbff467411af8f259d2f16dc73649), [usb\_association\_descriptor](structusb__association__descriptor.md#aa2ad28cdb50d50627ef16d29bfba5a88)
- bFunctionClass : [usb\_association\_descriptor](structusb__association__descriptor.md#a1acdb21ad26400d1785a14c637a2b857)
- bFunctionLength : [cdc\_acm\_descriptor](structcdc__acm__descriptor.md#a665260ce8cc55e35c941078987f92366), [cdc\_cm\_descriptor](structcdc__cm__descriptor.md#a578a2a39c7c80de58cb7d952f8decd22), [cdc\_ecm\_descriptor](structcdc__ecm__descriptor.md#aa5cfb3a02e9818cf3faaff1dbb9dd487), [cdc\_header\_descriptor](structcdc__header__descriptor.md#ac4ad6939d5a075ff2fe6d7505cba630b), [cdc\_ncm\_descriptor](structcdc__ncm__descriptor.md#a932a73d95abf90a0ba7f0de3e1760375), [cdc\_union\_descriptor](structcdc__union__descriptor.md#a83ee5a04668006397663142232471606)
- bFunctionProtocol : [usb\_association\_descriptor](structusb__association__descriptor.md#a7205b1693998e6471ac9dbafa446a6a5)
- bFunctionSubClass : [usb\_association\_descriptor](structusb__association__descriptor.md#a30ee67b37bfdbe56a5b58fab1d195dc9)
- bgcol : [shell\_vt100\_colors](structshell__vt100__colors.md#a085471a594831d7b585f6d9b02bc8216)
- bgr\_feat : [bt\_gmap\_feat](structbt__gmap__feat.md#a918d35e89da086321d728f61deb0c962)
- bgs\_feat : [bt\_gmap\_feat](structbt__gmap__feat.md#a0ef9878ffcd04a6b88cc8364173cfc10)
- big\_handle : [bt\_hci\_cp\_le\_big\_create\_sync](structbt__hci__cp__le__big__create__sync.md#a6692dae077ce1ce4f31bc94b9d391afd), [bt\_hci\_cp\_le\_big\_terminate\_sync](structbt__hci__cp__le__big__terminate__sync.md#ad7e4de2a9a3222c1bb8fa048cacd06fa), [bt\_hci\_cp\_le\_create\_big](structbt__hci__cp__le__create__big.md#af5412e4a69c05a09b2e818322636a98a), [bt\_hci\_cp\_le\_create\_big\_test](structbt__hci__cp__le__create__big__test.md#ac202f5cee0c1d0456b200606860fd5ab), [bt\_hci\_cp\_le\_terminate\_big](structbt__hci__cp__le__terminate__big.md#acb5fb9451cf890245a85704579b1d1c8), [bt\_hci\_evt\_le\_big\_complete](structbt__hci__evt__le__big__complete.md#a14eaa705f1df38337722a41e8189f807), [bt\_hci\_evt\_le\_big\_sync\_established](structbt__hci__evt__le__big__sync__established.md#a31a05f8afb69e5885700cc4ad3b161b2), [bt\_hci\_evt\_le\_big\_sync\_lost](structbt__hci__evt__le__big__sync__lost.md#ae59a9c18363f7aee67563494d98aa971), [bt\_hci\_evt\_le\_big\_terminate](structbt__hci__evt__le__big__terminate.md#ad9c9e6d42661366d62d79163fa9ad1c7), [bt\_hci\_rp\_le\_big\_terminate\_sync](structbt__hci__rp__le__big__terminate__sync.md#a741ab80e08e7ecfc5a0158ec0cf14654)
- biginfo : [bt\_le\_per\_adv\_sync\_cb](structbt__le__per__adv__sync__cb.md#aa44efa17bc28da1952785063a9baf6a9)
- bind\_pt\_irq : [xen\_domctl](structxen__domctl.md#a07d169fc24c634686e986b9dc2ed0079)
- bind\_to : [ipm\_console\_receiver\_config\_info](structipm__console__receiver__config__info.md#ac57741917d3d869680bb4b78446ed269), [ipm\_console\_sender\_config\_info](structipm__console__sender__config__info.md#aed3d8f396e858ddd9c4ea55e647feb34)
- BINDESC\_HANDLE\_TYPE\_FLASH : [bindesc\_handle](structbindesc__handle.md#a3367bd6f8c28a54305ba47f3f47f054caa79bb2c6316f34fe69662abcb9995d55)
- BINDESC\_HANDLE\_TYPE\_MEMORY\_MAPPED\_FLASH : [bindesc\_handle](structbindesc__handle.md#a3367bd6f8c28a54305ba47f3f47f054ca934b7d04129a28cac848dd472ab6bdd9)
- BINDESC\_HANDLE\_TYPE\_RAM : [bindesc\_handle](structbindesc__handle.md#a3367bd6f8c28a54305ba47f3f47f054ca6b384bd5837e71fd2b16f20e6b656488)
- bInterfaceClass : [usb\_if\_descriptor](structusb__if__descriptor.md#acd9c54c2ff9e2b92c61b0313d6403bac)
- bInterfaceCount : [usb\_association\_descriptor](structusb__association__descriptor.md#a7d3aad4fa259c865402a41b75bff3ff9)
- bInterfaceNumber : [usb\_if\_descriptor](structusb__if__descriptor.md#af3227603f9169d7edc173318d3da298c)
- bInterfaceProtocol : [usb\_if\_descriptor](structusb__if__descriptor.md#a85e85e0adac6a61d9ed2faeb2051cf71)
- bInterfaceSubClass : [usb\_if\_descriptor](structusb__if__descriptor.md#a3288bd3444a757496b7ec45a33d3c0c8)
- bInterval : [usb\_ep\_descriptor](structusb__ep__descriptor.md#a6facefd49d301bbe357e1d420583cf1d)
- bis : [bt\_hci\_cp\_le\_big\_create\_sync](structbt__hci__cp__le__big__create__sync.md#a6d1050c2a0522be215d82d3874fed4b6)
- bis\_bitfield : [bt\_iso\_big\_sync\_param](structbt__iso__big__sync__param.md#a14b03509daf760edbead86659f733136)
- bis\_channels : [bt\_iso\_big\_create\_param](structbt__iso__big__create__param.md#a7548bbb75f240a70435cb86a48846d0a), [bt\_iso\_big\_sync\_param](structbt__iso__big__sync__param.md#ac56d7206c3434837a52059716355adad)
- bis\_sync : [bt\_bap\_bass\_subgroup](structbt__bap__bass__subgroup.md#ac8061995eb73ba30e335e37714396ff5)
- bis\_sync\_req : [bt\_bap\_scan\_delegator\_cb](structbt__bap__scan__delegator__cb.md#a959112080deec0ab2dcc2c09a6958874)
- bit : [max32\_perclk](structmax32__perclk.md#a10dd006d4c09983c0947a07eb9085348)
- bit\_number : [bt\_hci\_cp\_le\_set\_host\_feature](structbt__hci__cp__le__set__host__feature.md#adcca35df216061ea08bd27e10fefd5e9)
- bit\_stream : [cipher\_ctx](structcipher__ctx.md#abc8f2818fcb3a83c3c00805a55e5805d)
- bit\_value : [bt\_hci\_cp\_le\_set\_host\_feature](structbt__hci__cp__le__set__host__feature.md#a78b67164bce232466ab348f8937682c3)
- bitmap : [xenctl\_bitmap](structxenctl__bitmap.md#ac5b0fda202e274a8daff643ca0fc73ca)
- bitmask\_of\_supported\_http\_methods : [http\_resource\_detail](structhttp__resource__detail.md#ae391e85a5713bceef9228b93e876c817)
- bits : [acpi\_dmar\_id](unionacpi__dmar__id.md#a0fffa1ca831591b42f732acfd1d86aa6)
- bitset : [zvfs\_fd\_set](structzvfs__fd__set.md#abb059273fd2fb5d997cda125795a7af6)
- blanking\_off : [display\_driver\_api](structdisplay__driver__api.md#a128c1324f4bfab707adc93aaff0f3371)
- blanking\_on : [display\_driver\_api](structdisplay__driver__api.md#aafdd79a11b46d4fa9288ddf3ed994c18)
- bLength : [dfu\_runtime\_descriptor](structdfu__runtime__descriptor.md#a0eeecced453c285febca7a9d867c7241), [usb\_association\_descriptor](structusb__association__descriptor.md#a11b2d1b6a8330dcb237e433db277e487), [usb\_bos\_capability\_lpm](structusb__bos__capability__lpm.md#a09ec679e05e7b848800ab63220109bef), [usb\_bos\_descriptor](structusb__bos__descriptor.md#aa3a661440a4b6d6a2ecf27da740c4121), [usb\_bos\_platform\_descriptor](structusb__bos__platform__descriptor.md#a477ab8e85845e8809ff7f4bd1bcc0f8a), [usb\_cfg\_descriptor](structusb__cfg__descriptor.md#a04fb3193880a8676f686f0f2ad8adbf4), [usb\_desc\_header](structusb__desc__header.md#a630c1fe55342f903d9a17663ef2729da), [usb\_device\_descriptor](structusb__device__descriptor.md#af3f980ad55af3fd6c222a8802996ab63), [usb\_device\_qualifier\_descriptor](structusb__device__qualifier__descriptor.md#ab1bf7ff669706ee5370f90d72f2a6856), [usb\_ep\_descriptor](structusb__ep__descriptor.md#ae75468872ec37d8c986534cd78fce717), [usb\_if\_descriptor](structusb__if__descriptor.md#af2e39b46da3fc3bc52cd9a4b38a3c897), [usb\_string\_descriptor](structusb__string__descriptor.md#a93d9bb7c2c44f6f0cae1a871a4a18789), [usbd\_desc\_node](structusbd__desc__node.md#ad71ef74fd7fe43a8117704553a3be01c)
- blink : [led\_driver\_api](structled__driver__api.md#af1974c5cc20c818e0e387b34cd14ac3b)
- blob : [bt\_mesh\_dfd\_srv](structbt__mesh__dfd__srv.md#ab538079d9f6b98f0de65583d6bdfe7f0), [bt\_mesh\_dfu\_cli](structbt__mesh__dfu__cli.md#a945b5c9f70086ca57d3ee77704ece6fd), [bt\_mesh\_dfu\_srv](structbt__mesh__dfu__srv.md#a75fa0d64310958904435f0b08ae9e5a4), [bt\_mesh\_dfu\_target](structbt__mesh__dfu__target.md#a96393388212d4bffd8fb00c82e58d364)
- blob\_id : [bt\_mesh\_dfu\_cli\_xfer](structbt__mesh__dfu__cli__xfer.md#adece8c0e0cec2262a7066b27636fc46e), [bt\_mesh\_dfu\_target\_status](structbt__mesh__dfu__target__status.md#a2848ad866fbd437164b73a7504b75518)
- blob\_params : [bt\_mesh\_dfu\_cli\_xfer](structbt__mesh__dfu__cli__xfer.md#a2c4feacc090dace0986e533257f9b291)
- block : [bt\_mesh\_blob\_cli](structbt__mesh__blob__cli.md#ac95970f7fd6b00fca284121394110250), [bt\_mesh\_blob\_srv](structbt__mesh__blob__srv.md#a8d6a01849e95c4a26d3270f4320c214f)
- block\_addr : [sdhc\_data](structsdhc__data.md#aad1e8462d94b4243c981147eab6c962d)
- block\_count : [bt\_mesh\_blob\_cli](structbt__mesh__blob__cli.md#a645fdb1f0efb281b1faae4692a3404f1), [dma\_config](structdma__config.md#adb776a4940c71b61cab60eb05159b2d4), [sd\_card](structsd__card.md#acdcfdaab67d284ef3a8ee3202fd7a538)
- block\_crypt\_hndlr : [cipher\_ops](structcipher__ops.md#a2675dd312be240c24d7d2c0e81bcde2b)
- block\_end : [bt\_mesh\_blob\_io](structbt__mesh__blob__io.md#a57381249bf63924b2345ece6e12909cb)
- block\_report\_timestamp : [bt\_mesh\_blob\_target\_pull](structbt__mesh__blob__target__pull.md#a9234ee3246890285b5cd30c32866b718)
- block\_size : [coap\_block\_context](structcoap__block__context.md#a27eb897fa2d455eb79220f1654509da3), [dai\_config](structdai__config.md#af3c768d9597298cea94bbdd6e5b5c4f3), [dma\_block\_config](structdma__block__config.md#a3fdab19df16d5e96054aabffbf27fcc1), [ext2\_cfg](structext2__cfg.md#a3eb5587725f3fee4dd8ea86a7077e662), [i2s\_config](structi2s__config.md#a62f504e954fc42c343d142513bbaf4ef), [pcm\_stream\_cfg](structpcm__stream__cfg.md#a3c224ba6f6c6fa7a128a739b6f1c36bf), [sd\_card](structsd__card.md#a3d29b73f029af5182475c2a2d365173b), [sdhc\_data](structsdhc__data.md#a20b0ca14adadcdb8d3681240faf5e7b6), [sdio\_func](structsdio__func.md#aa4ad13eb77f656020b38f6cf165e2965)
- block\_size\_log : [bt\_mesh\_blob\_xfer](structbt__mesh__blob__xfer.md#aa971742f85ccd94bbdef6c61203caeba), [bt\_mesh\_blob\_xfer\_info](structbt__mesh__blob__xfer__info.md#ad09a0e80202b4953788fcade5788f0ef), [bt\_mesh\_dfu\_cli\_xfer\_blob\_params](structbt__mesh__dfu__cli__xfer__blob__params.md#a45452ae73f585ffba5c76291d41dd1ed)
- block\_start : [bt\_mesh\_blob\_io](structbt__mesh__blob__io.md#a900f049b6a778d9e0973ee66b46dc046)
- blocking : [shell\_rpmsg](structshell__rpmsg.md#aca5ea2487d3712f9fdeb6f90043cbf53)
- blocking\_tx : [shell\_uart\_common](structshell__uart__common.md#ad166c0c136082334b19b403e2cbaa4a9)
- blocks : [bt\_mesh\_blob\_srv::bt\_mesh\_blob\_srv\_state](structbt__mesh__blob__srv_1_1bt__mesh__blob__srv__state.md#a0f5d7d310be154f85ee96ccceb12e971), [sdhc\_data](structsdhc__data.md#a47b378d455167bb8d7d05d2f058977fa)
- bmAttributes : [dfu\_runtime\_descriptor](structdfu__runtime__descriptor.md#aa8d5f353530adf846b14e88c97095a50), [usb\_bos\_capability\_lpm](structusb__bos__capability__lpm.md#a8a643af1e99eafdecc006cf714cb0af7), [usb\_cfg\_descriptor](structusb__cfg__descriptor.md#a6cc23afd69dd7fb77f4bc5ea55315f4c), [usb\_ep\_descriptor](structusb__ep__descriptor.md#ada1c690dfdee3427f303c04b5825ccca)
- bMaxPacketSize0 : [usb\_device\_descriptor](structusb__device__descriptor.md#ac7f47eb197506ac5c555bb4f2fe82d32), [usb\_device\_qualifier\_descriptor](structusb__device__qualifier__descriptor.md#ad065540e5d99fbd241b0712e601f62ee)
- bMaxPower : [usb\_cfg\_descriptor](structusb__cfg__descriptor.md#a717343eaf80cb0012cf87c9bc0c1c08f)
- bmCapabilities : [cdc\_acm\_descriptor](structcdc__acm__descriptor.md#a3066a08cbc5f0747d435a13ee4f22d14), [cdc\_cm\_descriptor](structcdc__cm__descriptor.md#aabbca6f88b936659124aa28264054b6d)
- bmEthernetStatistics : [cdc\_ecm\_descriptor](structcdc__ecm__descriptor.md#a3a7b901bef04212b217a69d055e37e66)
- bmNetworkCapabilities : [cdc\_ncm\_descriptor](structcdc__ncm__descriptor.md#a8a88e3d7d2b36876a38fa8025118f069)
- bmRequestType : [cdc\_acm\_notification](structcdc__acm__notification.md#a57b007a8ec893d660e6ec8a1b25f7dd3), [usb\_setup\_packet](structusb__setup__packet.md#a326cfb3e8b11cc2e7cf4738d593cf10a)
- bMS\_VendorCode : [usb\_bos\_capability\_msos](structusb__bos__capability__msos.md#a4da7539d3bc58fe1da48e3d4d8c965e2)
- bn : [bt\_hci\_cp\_le\_create\_big\_test](structbt__hci__cp__le__create__big__test.md#a734174187486ac760b8bf0e566166842), [bt\_hci\_evt\_le\_big\_complete](structbt__hci__evt__le__big__complete.md#a2327e42013033767af233d1c2c3acc56), [bt\_hci\_evt\_le\_big\_sync\_established](structbt__hci__evt__le__big__sync__established.md#a451466916fbe2f220c277b4b4e62241d), [bt\_hci\_evt\_le\_biginfo\_adv\_report](structbt__hci__evt__le__biginfo__adv__report.md#ada35f690706be1c6ee8f40787bbe53e5), [bt\_iso\_broadcaster\_info](structbt__iso__broadcaster__info.md#ab3cb80e6b362e093e6924ab11b8737e9), [bt\_iso\_sync\_receiver\_info](structbt__iso__sync__receiver__info.md#a8be50f8c6d76515ac290407959eaf0e1), [bt\_iso\_unicast\_tx\_info](structbt__iso__unicast__tx__info.md#ab4ea9d5bb535d29ae9406e948d8707a9)
- bNotificationType : [cdc\_acm\_notification](structcdc__acm__notification.md#af24dae76a280c008e40a0d031171235c)
- bNumberPowerFilters : [cdc\_ecm\_descriptor](structcdc__ecm__descriptor.md#aed687a9629eb3c793af9260db407a136)
- bNumConfigurations : [usb\_device\_descriptor](structusb__device__descriptor.md#a603204b0517e9ece9bc0d8476b2a7cdc), [usb\_device\_qualifier\_descriptor](structusb__device__qualifier__descriptor.md#a4022310ac474e11b6813af8c1f5d093f)
- bNumDeviceCaps : [usb\_bos\_descriptor](structusb__bos__descriptor.md#a2c0e68a49d6904d32413f3b3598bb926)
- bNumEndpoints : [usb\_if\_descriptor](structusb__if__descriptor.md#a9c67427276ada4d9370eba1bd50d6e3f)
- bNumInterfaces : [usb\_cfg\_descriptor](structusb__cfg__descriptor.md#adcb6ff8c1accd4b950c9ebfd4f98718f)
- body : [http\_response\_ctx](structhttp__response__ctx.md#aa027d1577dd19db43a17cdd0959b8e39)
- body\_found : [http\_response](structhttp__response.md#ac713af14995e36c1889291d12803ca18)
- body\_frag\_len : [http\_response](structhttp__response.md#a58405582a11aa86892b80133f8b4fa43)
- body\_frag\_start : [http\_response](structhttp__response.md#a45c8596746f5a359a1e18c95838b59d9)
- body\_len : [http\_response\_ctx](structhttp__response__ctx.md#a88b128e354c85f574409abd55633d2e2)
- bond\_deleted : [bt\_conn\_auth\_info\_cb](structbt__conn__auth__info__cb.md#af20b0d7fc5fd8399ad9368b3ef7067f8)
- bootable : [mcumgr\_image\_list\_flags](structmcumgr__image__list__flags.md#acb12d5ae0c75e9dac48874e542784bd3)
- bootstrap\_mode : [lwm2m\_ctx](structlwm2m__ctx.md#aafa787c2b7ea7599c51d9247ea9f1090)
- bos : [usbd\_desc\_node](structusbd__desc__node.md#afd65079b8b969fa4101a3f9f662c7b6b)
- bound : [ipc\_rpmsg\_ept](structipc__rpmsg__ept.md#a8159e224bc1a4ceb17081eea1c16d44d), [ipc\_service\_cb](structipc__service__cb.md#a76be12bf8a7964977b5d7512dd010110)
- bound\_cb : [ipc\_rpmsg\_instance](structipc__rpmsg__instance.md#a59125783afdf4a879e85ef7abaeb6f55)
- bounds : [k\_mem\_paging\_histogram\_t](structk__mem__paging__histogram__t.md#a893236502aeb56975263b27cf4f2755a)
- bParityType : [cdc\_acm\_line\_coding](structcdc__acm__line__coding.md#a472270d84e160348e024f756b834cbb8)
- bPropertyData : [msosv2\_guids\_property](structmsosv2__guids__property.md#abf28542190ae7fececadacd3e8dba58a)
- BPS : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a101c65bd2aec6ca07fa625939614673c)
- BPS\_b : [flash\_ra\_cf\_block\_map](structflash__ra__cf__block__map.md#a837aec4b3c8eb75201f9f0569aa0c7b5)
- br : [bt\_conn\_info](structbt__conn__info.md#a799e59d3a85625799a32ac3f0b3d67d1), [bt\_conn\_remote\_info](structbt__conn__remote__info.md#ab73365f09cdb5ce870272546543bcfeb)
- brake\_time : [drv2605\_rom\_data](structdrv2605__rom__data.md#ab9a8d1f4c7d0f390aad49fc5f2d607d9)
- branch : [silabs\_clock\_control\_cmu\_config](structsilabs__clock__control__cmu__config.md#a8e9a65a261eae1fefcf0d697a8a59bf9)
- bRequest : [usb\_setup\_packet](structusb__setup__packet.md#aab50ed2f2cdcc1d747f6f224fe9d2018)
- bReserved : [msosv2\_configuration\_subset\_header](structmsosv2__configuration__subset__header.md#aa063ff78775c00edde1de6e274a2b817), [msosv2\_function\_subset\_header](structmsosv2__function__subset__header.md#a07a64f2419014f41fa356fd85976985d), [usb\_bos\_platform\_descriptor](structusb__bos__platform__descriptor.md#a477719191468cec83d2a92a5d6f1231d), [usb\_device\_qualifier\_descriptor](structusb__device__qualifier__descriptor.md#aa1557859c9220ae5fda7d32833845444)
- bResumeRecoveryTime : [msosv2\_resume\_time](structmsosv2__resume__time.md#a33ff93b8c7d97dc9732158b2293cd377)
- bResumeSignalingTime : [msosv2\_resume\_time](structmsosv2__resume__time.md#a1a08a4ec1b884a68ffc6b52a84e747aa)
- bridge\_status : [bt\_mesh\_brg\_cfg\_cli\_cb](structbt__mesh__brg__cfg__cli__cb.md#ac045febf91cc95982985e6de094e403b)
- brightness : [auxdisplay\_capabilities](structauxdisplay__capabilities.md#a15e3926754baaefffa1eff45573a59b1)
- broadcast : [net\_stats\_eth](structnet__stats__eth.md#a054beb909134b0e0f22f5df599549128), [net\_stats\_wifi](structnet__stats__wifi.md#a03dc04638c4b670bd7f3520d45fc1eda)
- broadcast\_code : [bt\_bap\_broadcast\_assistant\_cb](structbt__bap__broadcast__assistant__cb.md#a09de9cb86dad76b485ff52257a0c68dc), [bt\_bap\_broadcast\_source\_param](structbt__bap__broadcast__source__param.md#a6a05b6448f55cf5f52f90e44d83146dc), [bt\_bap\_scan\_delegator\_cb](structbt__bap__scan__delegator__cb.md#a78d011c817e60725a0ef14c68bd655cd), [bt\_cap\_initiator\_broadcast\_create\_param](structbt__cap__initiator__broadcast__create__param.md#aa4d6fbd5bd13963004e381b987bbeb4d), [bt\_cap\_unicast\_to\_broadcast\_param](structbt__cap__unicast__to__broadcast__param.md#ad27a5f69ce697f029887e597090120a3)
- broadcast\_id : [bt\_bap\_broadcast\_assistant\_add\_src\_param](structbt__bap__broadcast__assistant__add__src__param.md#ae50b6b5a3f2c92f01e7070c605b37dde), [bt\_bap\_scan\_delegator\_add\_src\_param](structbt__bap__scan__delegator__add__src__param.md#a8e8eda4139e460800c6195b4c5f246e2), [bt\_bap\_scan\_delegator\_mod\_src\_param](structbt__bap__scan__delegator__mod__src__param.md#a11b4c6d787bd2c828e565282daf5cf2f), [bt\_bap\_scan\_delegator\_recv\_state](structbt__bap__scan__delegator__recv__state.md#abaa80f30cf2e84ee873d18eaedd4159d), [bt\_cap\_commander\_broadcast\_reception\_start\_member\_param](structbt__cap__commander__broadcast__reception__start__member__param.md#a8e6d5d1004d13069739229a7eec3abc0)
- broadcast\_reception\_start : [bt\_cap\_commander\_cb](structbt__cap__commander__cb.md#a14f6a51db5a76aac015a5de617712af3)
- broadcast\_reception\_stop : [bt\_cap\_commander\_cb](structbt__cap__commander__cb.md#a2188c52e3daf0a695d7c42e6cac561cf)
- broadcast\_source : [bt\_cap\_broadcast\_to\_unicast\_param](structbt__cap__broadcast__to__unicast__param.md#aeb6b9c09c50b5b1f7556b1ca0f2b49c9)
- broadcaster : [bt\_iso\_info](structbt__iso__info.md#a94e8132738697efa39857612399385b8)
- broker : [mqtt\_client](structmqtt__client.md#a72d61d9c0e717010ff90c2ed7fcddf5c), [shell\_mqtt](structshell__mqtt.md#ab874f817ad4424fb1fd8f2ad193c0949)
- brs : [can\_mcan\_rx\_fifo\_hdr](structcan__mcan__rx__fifo__hdr.md#a35d6a09669761d4b7d60c06e36f74e06), [can\_mcan\_tx\_buffer\_hdr](structcan__mcan__tx__buffer__hdr.md#af6554e36649326a1ee01757096e1c68f), [can\_mcan\_tx\_event\_fifo](structcan__mcan__tx__event__fifo.md#ac3924771aeb8885b4ad8d59758131b1a)
- bs : [isotp\_fc\_opts](structisotp__fc__opts.md#a8f31bf5c95069352043da33541911b3c)
- bssid : [wifi\_connect\_req\_params](structwifi__connect__req__params.md#aa8081b9075ff9244cefd0ac1ef3f42cb), [wifi\_credentials\_header](structwifi__credentials__header.md#a18d7796039bcdec0ce611a7f2dfe5c63), [wifi\_iface\_status](structwifi__iface__status.md#a5d5d19056a1a15365fbdd94274a0fc5e)
- bString : [usb\_string\_descriptor](structusb__string__descriptor.md#aefde51bb570c2bb2eb172c07d48233f1)
- bSubordinateInterface0 : [cdc\_union\_descriptor](structcdc__union__descriptor.md#a5bab5215179ecc0bb0bb6e7b9089abf6)
- BT\_CONN\_OOB\_LE\_LEGACY : [bt\_conn\_oob\_info](structbt__conn__oob__info.md#a318a663619f0bbbb90a849fd5e16c37ea4c33ea839306256a198c29ea783c659b)
- BT\_CONN\_OOB\_LE\_SC : [bt\_conn\_oob\_info](structbt__conn__oob__info.md#a318a663619f0bbbb90a849fd5e16c37eacd02773beb42df3fb6cbaa2fa2abda1e)
- buckets : [prometheus\_histogram](structprometheus__histogram.md#a2f37871231727963173b7336ea8cfafb), [sys\_hashmap\_data](structsys__hashmap__data.md#ad6f00cc9bfa4e654a3bdcd5c8803f326), [sys\_hashmap\_oa\_lp\_data](structsys__hashmap__oa__lp__data.md#a4f989f86a54a1806a33539a3834eeb60)
- budget : [xen\_domctl\_sched\_rtds](structxen__domctl__sched__rtds.md#a38a0822f999f17bd03dcecb43e695e3d)
- buf : [ec\_host\_cmd\_rx\_ctx](structec__host__cmd__rx__ctx.md#afcae3b7881f1c8634bb3ac1315111294), [ec\_host\_cmd\_tx\_buf](structec__host__cmd__tx__buf.md#a6444723bccc196fb9792e95957bd98a5), [espi\_flash\_packet](structespi__flash__packet.md#a22244bc4063618707eea571f170bdfde), [espi\_oob\_packet](structespi__oob__packet.md#a0b19890b5e63ecbd1b95eef57fd9263f), [espi\_saf\_packet](structespi__saf__packet.md#a00bfcab9fe2b928be3ea3485c5e91401), [flash\_img\_context](structflash__img__context.md#a80fb0afaa391d3242c7de9ffe0f10675), [http\_hpack\_header\_buf](structhttp__hpack__header__buf.md#a6d1d09942d85f148e3979cf88f1cb87a), [i2c\_msg](structi2c__msg.md#ac4aa590487270589a51964b38f853a37), [i3c\_msg](structi3c__msg.md#aa9d8920782b1a024b70970d60886deff), [jwt\_builder](structjwt__builder.md#a74a3d3e645f8b438bcdf12abdf0aabf7), [log\_mpsc\_pbuf](structlog__mpsc__pbuf.md#ac5349613a2a7505e124401af1020fa13), [log\_msg\_generic](unionlog__msg__generic.md#a74b4fa4fff98e914f8e7536fe0be568d), [log\_output](structlog__output.md#af43d26be4e52647c2b281362a01d1a10), [mpsc\_pbuf\_buffer](structmpsc__pbuf__buffer.md#a2b5cb8a3c7f4d41cf587318ccf6b0a76), [mpsc\_pbuf\_buffer\_config](structmpsc__pbuf__buffer__config.md#a2090b3da5dc85c68601fd7bdb54f6174), [peci\_buf](structpeci__buf.md#aca55975957106666161da358b7f85db6), [rtio\_sqe](structrtio__sqe.md#ab71176c084e8b8eb65dfeb3018ae2a49), [shell\_dummy](structshell__dummy.md#a3d227470504d3c565cdd5ff3408b69d3), [shell\_mqtt](structshell__mqtt.md#a909c0a7046181f37977355a4e3c1361d), [shell\_mqtt\_tx\_buf](structshell__mqtt__tx__buf.md#aa398ab99503f3b24e53fd81fd8aa08e1), [shell\_telnet\_line\_buf](structshell__telnet__line__buf.md#afdbfe1cad9640b8d9575303c77a8a97e), [shell\_websocket\_line\_buf](structshell__websocket__line__buf.md#a10a756bb4194410962dfffa59338664c), [smp\_shell\_data](structsmp__shell__data.md#a281058a6cb23102af46cb0457c3a3232), [spi\_buf](structspi__buf.md#aeaf52d3ff5af10545b2d6904ed452cba), [strbuf](structstrbuf.md#a421c67aa5a9400a826e8e274f1ffb900), [stream\_flash\_ctx](structstream__flash__ctx.md#a5d7dd0c4a0687e566deb8bd6af3f0c8d), [uart\_event\_rx](structuart__event__rx.md#a2d9dfa9d9b25ff976cf2e937c72eb245), [uart\_event\_rx\_buf](structuart__event__rx__buf.md#a2547c84b742f454cfedf1de6d433297b), [uart\_event\_tx](structuart__event__tx.md#a314a676a4050b2438b6f41485656bdbd), [udc\_event](structudc__event.md#ac1ff3bc9d629eb9b6c55602e7861e945), [uhc\_transfer](structuhc__transfer.md#a170385b08171659f05ac7112faf8e587)
- buf\_bytes : [stream\_flash\_ctx](structstream__flash__ctx.md#a6fcef2130672bea3b9e5170c80e6e56a)
- buf\_cnt : [uart\_async\_rx\_config](structuart__async__rx__config.md#a73a1c096f5aac03f3426c7320241fcf2)
- buf\_count : [net\_buf\_pool](structnet__buf__pool.md#a55b57f4f573c7e752c3ccf2f92f25626)
- buf\_len : [rtio\_sqe](structrtio__sqe.md#a67376f40a13960b152a23da250275722), [stream\_flash\_ctx](structstream__flash__ctx.md#aff53c741cf5141338206d89274c508c0), [uart\_async\_rx](structuart__async__rx.md#a85ea611224160caee86767b4910e17d9)
- buf\_pool : [smp\_shell\_data](structsmp__shell__data.md#a67997e0400ee096e98781b839df3d6c2)
- buf\_ready : [smp\_shell\_data](structsmp__shell__data.md#a3e15c83e64e1cab0f14141d2a6dd7bed)
- buf\_release\_cb : [uac2\_ops](structuac2__ops.md#aa934f5ecee8f8e67e2165735a6dd2bca)
- buf\_size : [display\_buffer\_descriptor](structdisplay__buffer__descriptor.md#aee9f34a6944b8e28622ab06d6907d40a)
- buf\_timeout : [dns\_resolve\_context](structdns__resolve__context.md#a402a4a2adfe3859f8dab749b44b7d8e6)
- buffer : [adc\_sequence](structadc__sequence.md#a5df0ee0e6d3215aa052f108476bd57ec), [coredump\_cmd\_copy\_arg](structcoredump__cmd__copy__arg.md#a74495abb94670f983a3f136274485c40), [http\_client\_ctx](structhttp__client__ctx.md#aca9893deabb995cb3b3099ba1711be63), [k\_pipe](structk__pipe.md#acb78995d6b7df28a5452f5d2e88b4dfb), [net\_pkt](structnet__pkt.md#ad319458430aa691b88e24776e843d30b), [sensor\_decode\_context](structsensor__decode__context.md#a23e27eb0687d722be78e1b89278613d1), [shell\_fprintf](structshell__fprintf.md#a60eb48520fa96fccdfe7a9f4a32729f7), [uart\_async\_rx\_buf](structuart__async__rx__buf.md#ad03eb3023829258581e54c75e0a66942), [uart\_async\_rx\_config](structuart__async__rx__config.md#a2d5d07f7e98ae6743378f75ce3afc4f2), [video\_buffer](structvideo__buffer.md#a6a62d7a50c717dc6bc85e2d8f6ae95e3)
- buffer\_client\_messages : [lwm2m\_ctx](structlwm2m__ctx.md#ac6709d32a87ece72c7cdf283c4ff60c0)
- buffer\_cnt : [shell\_fprintf\_control\_block](structshell__fprintf__control__block.md#a3070be7874707be797997210ce8cf8c3)
- buffer\_end : [k\_msgq](structk__msgq.md#a9d47fd25d7a70e8518d45dd48c51f0e0)
- buffer\_size : [adc\_sequence](structadc__sequence.md#a8e1bc9a4361e274bbdaedeb3151b71e5), [os\_mgmt\_info\_append](structos__mgmt__info__append.md#ae96963a00ef4b15099cf36399a159382), [shell\_fprintf](structshell__fprintf.md#a0055b09fb33072e035fca20a4dfd6d15), [wifi\_filter\_info](structwifi__filter__info.md#a1b2d0448fc7f62654e3f5aacfba62f8f)
- buffer\_start : [k\_msgq](structk__msgq.md#aca77f1cf833d3aa27ae65004b446bdd2)
- buffered : [dac\_channel\_cfg](structdac__channel__cfg.md#a31df5ad55f40cb89819fac3acd6b4d96)
- buffers : [spi\_buf\_set](structspi__buf__set.md#a2b88917ca29487b2d0b5b63d2083db67)
- build : [sensing\_sensor\_version](structsensing__sensor__version.md#a668f5d23171c38e1cc13a4221e639815)
- build\_num : [bt\_mesh\_dfu\_metadata\_fw\_ver](structbt__mesh__dfu__metadata__fw__ver.md#a7c21ae9b7340a1f13d107bf31aeeca90), [mcuboot\_img\_sem\_ver](structmcuboot__img__sem__ver.md#abf2e489560daefaa0c5d33e9c7535dab)
- bulk : [udc\_ep\_caps](structudc__ep__caps.md#a73ec7e7c7fd043065a7c59c89c6cc36e)
- bulk\_xfers : [uhc\_data](structuhc__data.md#ac6214566324740c34a8bba42515d1d32)
- burst\_count : [ethernet\_t1s\_param](structethernet__t1s__param.md#a081fb97c8fd027a5b6bba95f3b6d5acd)
- burst\_number : [bt\_bap\_qos\_cfg](structbt__bap__qos__cfg.md#a597b81261511ec820caa66bd091ab896), [bt\_iso\_biginfo](structbt__iso__biginfo.md#ad114dd97500d12242da77e8522133953), [bt\_iso\_chan\_io\_qos](structbt__iso__chan__io__qos.md#ac64a3ce7282ac8bc5b5420a46417b22c)
- burst\_timer : [ethernet\_t1s\_param](structethernet__t1s__param.md#a67fba4b2ffe9affaf1cc4f6059c47e71)
- bus : [acpi\_dmar\_id](unionacpi__dmar__id.md#a3e9194555004762db83d9853594ffca1), [arm\_clock\_control\_t](structarm__clock__control__t.md#ab596009f00c33d84af817c860bdb9e40), [bt\_hci\_driver](structbt__hci__driver.md#acd9a4d631da22b4638afd4593cff7d0c), [emul](structemul.md#a9f3ec93d05fdf287069dbb0aa48cc8ac), [i2c\_dt\_spec](structi2c__dt__spec.md#a40d5c17c04910927c34eb69b173cbb85), [i3c\_device\_desc](structi3c__device__desc.md#affdfa3b12a01f966ba5a6a563e669803), [i3c\_i2c\_device\_desc](structi3c__i2c__device__desc.md#a2c37ea680bc4affe83f9e1bd1a1da5d2), [max32\_perclk](structmax32__perclk.md#aef1b470aa172b72c180b1cb2a700c459), [mspi\_dt\_spec](structmspi__dt__spec.md#ab21ff3d5959b78f5b5cdc7fcf70e8756), [pcie\_scan\_opt](structpcie__scan__opt.md#a036225c7a5730ba2040e03cab491b9da), [smbus\_dt\_spec](structsmbus__dt__spec.md#a2b34afb2bc5d55382bc11e0a5ee72684), [spi\_dt\_spec](structspi__dt__spec.md#a37519633ae787ffaa1026e6867d7007a), [stm32\_pclken](structstm32__pclken.md#a511b195a13a653c1ff664a41ef791f8e), [xen\_domctl\_bind\_pt\_irq](structxen__domctl__bind__pt__irq.md#aa73344f449c2f794c1b07d81bc5e2613)
- bus\_4\_bit\_support : [sdhc\_host\_caps](structsdhc__host__caps.md#a70b8180301c72db291b9d53bf5379655)
- bus\_8\_bit\_support : [sdhc\_host\_caps](structsdhc__host__caps.md#ad09f103fc8ce341d25e1f824e97bd665)
- bus\_clock : [silabs\_clock\_control\_cmu\_config](structsilabs__clock__control__cmu__config.md#a5792da0cf4363d3127cff97562763f45)
- bus\_io : [sd\_card](structsd__card.md#a875b7081a3e647b782cdb835372f5029)
- bus\_mode : [sdhc\_io](structsdhc__io.md#a2b4456b108778aada0d42b8c8107b3e9)
- bus\_speed : [sd\_switch\_caps](structsd__switch__caps.md#a29024de744d65fb3d8fe51c4d4424aee)
- bus\_type : [emul](structemul.md#a92a4811a8656b8f0c3f3c7873918da3c)
- bus\_width : [mmc\_ext\_csd](structmmc__ext__csd.md#a63545477058cce0c5727637bcbb06a47), [sd\_card](structsd__card.md#a38383b8f5c1f9bff1537f407fbec9faf), [sdhc\_io](structsdhc__io.md#a904b05c7e73e80bb7326b0bfcb6b7103)
- busy : [dma\_status](structdma__status.md#a92ec05d9207caa828064661897f2f31c), [mpsc\_pbuf\_hdr](structmpsc__pbuf__hdr.md#a83666ac11d7c4271186b67966c3729b4), [mpsc\_pbuf\_skip](structmpsc__pbuf__skip.md#a71106c8d9ec492ef788973996c9cba15), [udc\_ep\_stat](structudc__ep__stat.md#ad515a667ffd705408617dd28700db1e9)
- buzzer : [osdp\_cmd](structosdp__cmd.md#a62250f899e17c6fd94a1629f5ef9a479)
- bVendorCode : [usb\_bos\_capability\_webusb](structusb__bos__capability__webusb.md#a3ae4aada1ab7b28d9bac6294467e93ff)
- by\_uuid : [bt\_gatt\_read\_params](structbt__gatt__read__params.md#a790606149a7619dd4338a6c6e7d24eaa)
- bypass : [shell\_ctx](structshell__ctx.md#a8e02d1d9a521379ad4188b4678cc6071)
- byte\_size : [xtensa\_register](structxtensa__register.md#a4b0b68c1c0b8401cb7f7fdc8ef653844)
- byte\_string : [fs\_mgmt\_hash\_checksum\_group](structfs__mgmt__hash__checksum__group.md#aa9bb8702720e6a8287ec6c88da46afff)
- bytes : [net\_stats](structnet__stats.md#a7a28233e6d23efdce0143469b9bb6c05), [net\_stats\_eth](structnet__stats__eth.md#a8c5cf1ead8ba214425a16fed1c2ad0fb), [net\_stats\_ppp](structnet__stats__ppp.md#ab2b48da7f19d4b83e3f41b41979b7ed8), [net\_stats\_tc](structnet__stats__tc.md#a192a7ec0d24bce9e62f766e481ee5709), [net\_stats\_tcp](structnet__stats__tcp.md#af80c18bcc253133ce5f0597ac190b349), [net\_stats\_wifi](structnet__stats__wifi.md#aa055b1e8bd8f1e50815c1028b562be07)
- bytes\_per\_inode : [ext2\_cfg](structext2__cfg.md#a04309de819dc1b31a7578667c82678b6)
- bytes\_used : [k\_pipe](structk__pipe.md#a91bedad65285546734b8724811dc6eb8)
- bytes\_written : [stream\_flash\_ctx](structstream__flash__ctx.md#a694774f427f3a93057f0365867d3d90a)
- bytes\_xfered : [sdhc\_data](structsdhc__data.md#ae68f1e7f1fbff14c24bd42fa300f9e15)
- bytesused : [video\_buffer](structvideo__buffer.md#a17505a283ab5ef65047b798cb49aa9e1)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.0.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
